# dep-grid

./: .gitignore  Make_Grid_New.ipynb  README.md  country_grid.py  grid_pacific.geojson  land_grid.py  merge.py  pyproject.toml  requirements.txt
dep_grid/: gadm.py  grid.py
notebooks/: Make_Grid_New.ipynb
src/: gadm.py  grid.py
