[tool.poetry]
name = "dep-grid"
version = "0.1.0"
description = "Feature-based representation of the Digital Earth Pacific raster gridding scheme"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
antimeridian = "^0.3.3"
geopandas = "^0.14.1"
odc-geo = "^0.4.1"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
branca = "^0.7.0"
folium = "^0.15.0"
mapclassify = "^2.6.1"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
