[tool.poetry]
name = "dep-grid"
version = "0.1.0"
description = "Feature-based representation of the Digital Earth Pacific raster gridding scheme"
authors = ["Alex Leith <alex@auspatious.com>", "Jesse Anderson <jesse.anderson@gmail.com>", "Sachindra Singh <sanchindas@spc.int>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dep_grid"}]

[tool.poetry.dependencies]
python = "^3.10"
antimeridian = "^0.3.3"
geopandas = "^0.14.1"
odc-geo = "^0.4.1"
pandas = "^2.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
branca = "^0.7.0"
folium = "^0.15.0"
mapclassify = "^2.6.1"
matplotlib = "^3.8.2"
ipykernel = "^6.28.0"
pystac-client = "^0.7.5"
planetary-computer = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
